# nonebot_plugin_crazy_thursday

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: dependabot.yml  poetry-publish.yml
nonebot_plugin_crazy_thursday/: __init__.py  config.py  post.json
nonebot_plugin_crazy_thursday/resource/: post.json
