[tool.poetry]
name = "nonebot_plugin_crazy_thursday"
version = "0.1.5"
description = "Send crazy thursday articles of KFC randomly!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
