[tool.poetry]
name = "nonebot_plugin_crazy_thursday"
version = "0.2.6rc1"
description = "Send KFC crazy thursday articles randomly!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_crazy_thursday"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0b3"
nonebot-adapter-onebot = "^2.1.1"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
default = true
